--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link href="https://fonts.googleapis.com/css?family=Sree+Krushnadevaraya" rel="stylesheet">
+    <link rel="stylesheet" href=css/nav-style.css>
     <link rel="stylesheet" href="styles.css">
 </head>
 
